<resources>
    <string name="app_name">Maynooth Sky Radar</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading&#8230;</string>
    <string name="pModel">Aircraft:</string>
    <string name="modeS">Mode-S HexIdent:</string>
    <string name="lati">Latitude</string>
    <string name="longi">Longitude</string>
    <string name="alt">Altitude</string>
    <string name="reg">Registration:</string>
    <string name="vSpeed">Vertical Speed:</string>
    <string name="gSpeed">Ground Speed:</string>
    <string name="track">Track:</string>
    <string name="rCode">Radar:</string>
    <string name="squawk">Squawk:</string>
    <string name="stdep">STD:</string>
    <string name="starr">STA:</string>
    <string name="atdep">ATD:</string>
    <string name="etarr">ETA:</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="enter_address">Please enter the web address (no port number needed) of your server below.</string>
    <string name="enter_lat_and_lon">Please enter the latitude and longitude you wish the map to be centred on. Use negative values for south and west.</string>
    <string name="malformed_url_title">Malformed URL</string>
    <string name="malformed_url_content">Please enter a different URL.</string>
    <string name="add_address_here">Server address</string>
    <string name="server_not_added">No server address found</string>
    <string name="server_unavailable_title">Server unavailable</string>
    <string name="server_unavailable_content">The request to the server is unavailable. Do you want to try again?</string>

    <string name="accept">Accept</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="try_again">Try again</string>
    <string name="cancel_text">Cancel</string>

    <string name="conn_unavailable_title">No connection</string>
    <string name="conn_unavailable_content">Your device isn\'t connected to the Internet. Please connect to wi-fi or activate your mobile data.</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="action_about">About</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_setup">SetUpActivity</string>
</resources>
