<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/enter_url_text_container"
    android:orientation="vertical"
    android:paddingLeft="@dimen/inside_margin"
    android:paddingRight="@dimen/inside_margin"
    android:paddingTop="@dimen/inside_margin"
    android:paddingBottom="@dimen/inside_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_not_added"
        android:textSize="@dimen/md_title_textsize"
        android:id="@+id/edit_url_fragment_title"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_address"
        android:id="@+id/edit_url_fragment_content"
        android:layout_below="@id/edit_url_fragment_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_address_here"
        android:textColorHint="#cccccc"
        android:id="@+id/server_address_edit_field"
        android:layout_below="@+id/edit_url_fragment_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_lat_and_lon"
        android:id="@+id/edit_lat_lon_content"
        android:layout_below="@+id/server_address_edit_field"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longi"
        android:textColorHint="#cccccc"
        android:id="@+id/latitude_edit_field"
        android:layout_below="@+id/edit_lat_lon_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lati"
        android:textColorHint="#cccccc"
        android:id="@+id/longitude_edit_field"
        android:layout_below="@+id/latitude_edit_field"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/button_submit_server_address"
        android:enabled="false"
        android:layout_below="@+id/longitude_edit_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/button_clear"
        android:enabled="false"
        android:layout_below="@+id/longitude_edit_field"
        android:layout_toRightOf="@+id/button_submit_server_address"
        android:layout_toEndOf="@+id/button_submit_server_address" />
</RelativeLayout>