<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.se415017.maynoothskyradar.fragments.AircraftDetailFragment">
    <!-- TODO: Get the map to just take up the top half of the screen -->
    <fragment
        android:id="@+id/detail_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top" />

    <!-- TODO: Investigate bottom sheets -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        tools:context="com.example.se415017.maynoothskyradar.fragments.AircraftDetailFragment">

        <TextView
            android:id="@+id/detail_icao_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modeS"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_icao_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/detail_icao_title"
            android:layout_alignEnd="@id/detail_icao_title"
            android:layout_alignRight="@id/detail_icao_title"
            android:padding="@dimen/content_margin" />

        <TextView
            android:id="@+id/detail_callsign_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/detail_icao_content"
            android:layout_alignEnd="@id/detail_icao_content"
            android:layout_alignRight="@id/detail_icao_content"
            android:padding="@dimen/activity_vertical_margin" />

        <TextView
            android:id="@+id/detail_lat_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_icao_title"
            android:text="@string/lati"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_lat_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/detail_lat_title"
            android:layout_alignEnd="@id/detail_lat_title"
            android:layout_alignRight="@id/detail_lat_title"
            android:padding="@dimen/content_margin" />

        <TextView
            android:id="@+id/detail_lon_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_lat_title"
            android:text="@string/longi"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_lon_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/detail_lon_title"
            android:layout_alignEnd="@id/detail_lon_title"
            android:layout_alignRight="@id/detail_lon_title"
            android:padding="@dimen/content_margin" />

        <TextView
            android:id="@+id/detail_alt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_lon_title"
            android:text="@string/alt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_alt_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/detail_alt_title"
            android:layout_alignEnd="@id/detail_alt_title"
            android:layout_alignRight="@id/detail_alt_title"
            android:padding="@dimen/content_margin" />
    </RelativeLayout>
</RelativeLayout>
